@@ -2,7 +2,7 @@
 ##########################################
 
 :Author: Ben Finney <ben+python@benfinney.id.au>
-:Updated: 2011-07-02
+:Updated: 2014-05-20
 
 ..
     This is free software: you may copy, modify, and/or distribute this work
@@ -125,12 +125,19 @@ from closure::
 
 
 ..
+    This is free software: you may copy, modify, and/or distribute this work
+    under the terms of the Apache License version 2.0 as published by the
+    Apache Software Foundation.
+    No warranty expressed or implied. See the file LICENSE.ASF-2 for details.
+
+..
     Local variables:
-    mode: rst
     coding: utf-8
+    mode: text
+    mode: rst
     time-stamp-format: "%:y-%02m-%02d"
     time-stamp-start: "^:Updated:[         ]+"
     time-stamp-end: "$"
     time-stamp-line-limit: 20
     End:
-    vim: filetype=rst fileencoding=utf-8 :
+    vim: fileencoding=utf-8 filetype=rst :
