@@ -3,7 +3,7 @@
 # test/scaffold.py
 # Part of ‘python-daemon’, an implementation of PEP 3143.
 #
-# Copyright © 2007–2012 Ben Finney <ben+python@benfinney.id.au>
+# Copyright © 2007–2014 Ben Finney <ben+python@benfinney.id.au>
 #
 # This is free software: you may copy, modify, and/or distribute this work
 # under the terms of the Apache License, version 2.0 as published by the
@@ -411,3 +411,10 @@ class Exception_TestCase(TestCase):
                 self.failUnless(
                     isinstance(instance, match_type),
                     msg=fail_msg)
+
+
+# Local variables:
+# coding: utf-8
+# mode: python
+# End:
+# vim: fileencoding=utf-8 filetype=python :
